--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.menubar {
+  color: brown;
+  font-size: .8em;
+  padding-top: .1em;
+  height: 2.5em;
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction:column;
   align-items: center;
+  background-color: rgb(174, 221, 219);
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+.topbar {
+  color: brown;
+  font-size: 2.5em;
+  padding-top: .1em;
+  margin-bottom: .8em;
+  height: 2.5em;
+  width: 100%;
+  display: flex;
+  flex-direction:column;
+  align-items: center;
+  background-color: rgb(174, 221, 219);
+  justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main {
+  display: flex;
+  justify-content: center;
+
 }
